upgrade functions, models and controllers